finalize articles
